--- a/airport-crush/Cargo.toml
+++ b/airport-crush/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 r2d2 = "0.8.10"
+jsonwebtoken = "=7.2"
 rocket = {version = "0.5.0-rc.3", features = ["json"]}
 
 [dependencies.mongodb]
