--- a/airport-crush/Cargo.toml
+++ b/airport-crush/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 r2d2 = "0.8.10"
 jsonwebtoken = "=7.2"
 rocket = {version = "0.5.0-rc.3", features = ["json"]}
+serde = "1.0.190"
 
 [dependencies.mongodb]
 version = "2.7.0"
