--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ jsonwebtoken = "=7.2"
 rocket = {version = "0.5.0-rc.3", features = ["json"]}
 serde = "1.0.190"
 serde_json = "1.0"
+rocket_cors = "0.6.0"
 
 
 [dependencies.mongodb]
