--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ rocket = {version = "0.5.0-rc.3", features = ["json"]}
 serde = "1.0.190"
 serde_json = "1.0"
 rocket_cors = "0.6.0"
+dotenv = "0.15.0"
+
 
 
 [dependencies.mongodb]
